updates late June 2020

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -109,7 +109,7 @@ Leicester LE1 9BH United Kingdom\\[.2cm]
 \section*{Current Academic Roles}
 ---\emph{Senior Lecturer in Music and Audio Technology}, School of Computer Science and Informatics, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
----\emph{Poster Chair of the 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\
+---\emph{Poster Co-Chair of the 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\
 ---\emph{Women in NIME (WiNIME) officer}, International Conference of New Interfaces for Musical Expression.\\
 ---\emph{Programme Committee Member}, Tenth Workshop on Ubiquitous Music, Porto Seguro, Brazil.
 
@@ -165,7 +165,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \noindent
 \years{01/2020--present}\textsc{Senior Lecturer in Music and Audio Technology}. Leicester Media School, Faculty of Computing, Engineering and Media, DMU. \\
 \years{08/2018--12/2019}\textsc{Associate Professor in Music Technology}. Department of Music, NTNU. \\
-\years{08/2018--2019}\textsc{Visiting Lecturer}. C4DM, School of EECS, QMUL. \\
+\years{08/2018--01/2019}\textsc{Visiting Lecturer}. C4DM, School of EECS, QMUL. \\
 \years{10/2017--07/2018}\textsc{Postdoctoral Research Assistant}. C4DM, School of EECS, QMUL. \\
 \years{07/2015--09/2017}\textsc{Postdoctoral Fellow}. Center for Music Technology (GTCMT) | Digital Media Program, Georgia Tech. \\
 \years{08/2013--09/2014}\textsc{Research Fellow}. London Knowledge Lab, UCL Institute of Education. London. \\
@@ -190,7 +190,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \subsection*{Research Grants, Honors \& Awards}
 \years{2019b} \textsc{Web Audio Conference 2019 Best Paper Award}. NTNU, Trondheim, Norway.\\
 \years{2019a} \textsc{Travel grant for European research and promotion} (30,000 NOK, approx. 3,000 \euro). NTNU, Trondheim, Norway.\\
-\years{2018--2021} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK, approx. 25,000 \euro), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
+\years{2018--2019} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK, approx. 25,000 \euro), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
 \years{2017} NCWIT Engagement Excellence Award (5,000 \$ cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
 \years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
 \years{10/2010--07/2013}\textsc{3-year Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
@@ -291,10 +291,14 @@ Candidate’s Share: 50\% (1,500 \euro)
 \section*{Research Profiles}
 \noindent
 
-\textbullet \- \href{https://scholar.google.com/citations?user=yi3WXM8AAAAJ}{Scholar Google}\\
-\textbullet \- \href{http://oro.open.ac.uk/view/person/ax22.html}{Open Research Online}\\
+\textbullet \- \href{https://scholar.google.com/citations?user=yi3WXM8AAAAJ}{Google Scholar}\\
+\textbullet \- \href{https://www.semanticscholar.org/author/Anna-Xamb\%C3\%B3/1915531}{Semantic Scholar}\\
+\textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}\\
 \textbullet \- \href{http://open.academia.edu/AnnaXambo}{Academia.edu}\\
-\textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}\\%[1.2cm]%hack
+\textbullet \- \href{https://dora.dmu.ac.uk/browse?type=author&value=Xambo,\%20Anna}{DORA (De Montfort Open Research Archive)}\\
+\textbullet \- \href{https://app.cristin.no/persons/show.jsf?id=997893}{CRISTIN (Current Research Information System in Norway)}\\
+\textbullet \- \href{http://oro.open.ac.uk/view/person/ax22.html}{Open Research Online}\\
+%[1.2cm]%hack
 
 \section*{Publications}
 \noindent
@@ -309,6 +313,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Peer-Reviewed Book Chapters}
 \noindent
 
+\years{2020}Støckert, R., Bergsland, A., \textbf{Xambó, A.} (in preparation). “The Notion of Presence in a Telematic Cross-Disciplinary Program for Music, Communication and Technology". Accepted to appear in \emph{MusTed-antologi 2020}.\\
 \years{2019}\textbf{Xambó, A.}, Font, F., Fazekas, G., Barthet, M. (2019). “Leveraging Online Audio Commons Content For Media Production". In Michael Filimowicz ed. Foundations in Sound Design for Linear Media: An Interdisciplinary Approach. Routledge. pp. 248-282. ISBN 9781138093966.\\
 \years{2016}\textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.\\
 \years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C., Jordà, S. (2013). “Video Analysis for Evaluating Music Interaction: Musical Tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
@@ -346,7 +351,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \years{2018a}Weisling, A., \textbf{Xambó, A.}, Olowe, I., Barthet, M. (2018) “Surveying the Compositional and Performance Practices of Audiovisual Practitioners". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA. pp. 344--345.\\ 
 \years{2017d}\textbf{Xambó, A.}, Shah, P., Roma, G., Freeman, J., Magerko, B. (2017) “Turn-taking and Chatting in Collaborative Music Live Coding". \emph{Nominee for Best Paper Award}. In \emph{Proceedings of the Audio Mostly Conference (AM '17)}. London.\\ 
 \years{2017c}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Handwaving: Gesture Recognition for Participatory Mobile Music". In \emph{Proceedings of the Audio Mostly Conference (AM '17)}. London.\\
-\years{2017b}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Loop-aware Audio Recording for the Web". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London\\ 
+\years{2017b}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Loop-aware Audio Recording for the Web". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\ 
 \years{2017a}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (2017) Experience and Ownership with a Tangible Computational Music Installation for Informal Learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. Yokohama, Japan. pp. 351--360.\\ 
 \years{2016b}Freeman, J., Magerko, B., Edwards, D., Miller, M., Moore, R., \textbf{Xambó, A.} (2016). “Using EarSketch to Broaden Participation in Computing and Music". In \emph{Proceedings of the 13th Sound and Music Computing Conference (SMC 2016)}. Hamburg, Germany. pp. 156--163.\\
 \years{2016a}\textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). “Challenges and New Directions for Collaborative Live Coding in the Classroom". In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2016)}. Brighton, UK. pp. 65--73.\\
@@ -363,7 +368,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
 \years{2019b}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (2019). ``Trondheim EMP Repository processing''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 161--162.\\
-\years{2019a}Støckert, R., Jensenius, A.R., \textbf{Xambó, A.}, Brandtsegg, Ø. (2019). ``A Case Study in Learning Spaces for Physical-Virtual Two-Campus Interaction''. In \emph{Proceedings of the European University Information Systems (EUNIS)}. 
+\years{2019a}Støckert, R., Jensenius, A.R., \textbf{Xambó, A.}, Brandtsegg, Ø. (2019). ``A Case Study in Learning Spaces for Physical-Virtual Two-Campus Interaction''. In \emph{Proceedings of the European University Information Systems (EUNIS)}. \emph{Dørup Award winning paper}.\\ 
 Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (2019). ``Trondheim EMP Repository processing''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 161--162.\\
 \years{2018b}Skach, S., \textbf{Xambó, A.}, Turchet, L., Stolfi, A., Stewart, B., Barthet, M. (2018). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". In \emph{Proceedings of the Twelfth International Conference on Tangible, Embedded, and Embodied Interaction (TEI '18)}. Stockholm, Sweden. pp. 80--87.\\
 \years{2018a}Weisling, A., \textbf{Xambó, A.} (2018). “Beacon: Exploring Physicality in Digital Performance". In \emph{Proceedings of the Twelfth International Conference on Tangible, Embedded, and Embodied Interaction (TEI '18)}. Stockholm, Sweden. pp. 586--591.\\
@@ -394,19 +399,25 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
+\years{2020} \textsc{Keynote Speaker} (June 24, 2020). “Collaborative/Participatory Music Experiences: A Dialogue Between SMC and HCI". \emph{Sound and Music Computing Conference 2020 (SMC 2020)}. Torino, Italy. \href{https://youtu.be/h9Og-tUk5JQ?t=4712}{[video]}\\ 
 \years{2019d} \textsc{Oral Presenter} (December 5, 2019). “Facilitating Team-Based Programming Learning with Web Audio". \emph{WAC '19}. 
 \emph{NTNU}, Trondheim, Norway.\\
 \years{2019c} \textsc{Oral Presenter} (November 22, 2019). “Research as Practice / Practice as Research: Real-time Algorithmic Music Experiences and Women in Music Technology". \emph{NOTAM}, Oslo, Norway.\\
 \years{2019b} \textsc{Oral Presenter} together with Jawad, K. and Shrestha, S. (June 20, 2019). “International joint Master's programme in Music, Communication \& Technology: A master for technological humanists". \emph{MA Creative Technologies}. \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany.\\
 \years{2019a} \textsc{Oral Presenter} (July 5, 2019). "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". \emph{NIME '19}. Centro cultural, Universidade Federal do Rio Grande do Sol (UFRGS), Porto Alegre, Brazil.\\
-\years{2018e} \textsc{Oral Presenter} together with Pauwels, J.  (September 19, 2018). "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". \emph{WAC '18}. \emph{Technische Universität Berlin}, Berlin, Germany.\\
-\years{2018d} \textsc{Oral Presenter} together with Pauwels, J. (September 14, 2018). "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". \emph{AM '18}. \emph{University of Wrexham}, Wrexham, UK.\\
-\years{2018c} \textsc{Oral Presenter}. (July 12, 2018). “Audio Commons: Challenges and Opportunities of Using Online Repositories in Music Production and Performance". \emph{Filmuniversität Babelsberg Konrad Wolf}. Potsdam, Germany.\\
+\years{2018j}\textsc{Panel Member}. (November 21, 2018). \emph{Panel: Women in Music Technology around the World} with Nela Brown (FLO), Magdalena Chudy (FLO), Liz Dobson (YSWN), Ada Mathea Hoel (WoNoMute), Léa Ikkache (WiMT), Tuna Pase (FLO), Franziska Schroeder (FLO), Ariane Stolfi, (Sonora) Sonia Wilkie (FLO) and Anna Xambó (WoNoMute, WiMT). Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
+\years{2018i}\textsc{Panel Member}. (November 15, 2018). \emph{Panel: Future of the Music Industries} with Joe Lyske (chair, MXX), Jesper Skibsby (panelist, WARM), Nick Breen (panelist, Reed Smith) and Anna Xambó (panelist, NTNU). Resonate Music Conference 2018. Barras Art and Design (BAAD), Glasgow, Scotland, UK.\\
+\years{2018h}\textsc{Panel Member}. (October 26, 2018). \emph{Panel Session 3: Equality, Diversity, Gender} with Thomas Hilder (chair), Jill Diana Halstead Hjørnevik (panelist), Sunniva Skjøstad Hovde (panelist), Vivian Anette Lagesen (panelist), and Anna Xambó (panelist). Knowing Music -- Musical Knowing: Cross disciplinary dialogue on epistemologies. International Music Research School 2018, NTNU. Dokkhuset, Trondheim, Norway.\\
+\years{2018g} \textsc{Oral Presenter} together with Pauwels, J.  (September 19, 2018). "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". \emph{WAC '18}. \emph{Technische Universität Berlin}, Berlin, Germany.\\
+\years{2018f} \textsc{Oral Presenter} together with Pauwels, J. (September 14, 2018). "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". \emph{AM '18}. \emph{University of Wrexham}, Wrexham, UK.\\
+\years{2018e} \textsc{Oral Presenter}. (July 12, 2018). “Audio Commons: Challenges and Opportunities of Using Online Repositories in Music Production and Performance". \emph{Filmuniversität Babelsberg Konrad Wolf}. Potsdam, Germany.\\
+\years{2018d}\textsc{Panel Member}. (July 4, 2018) \emph{The Disturbing Discussion about Innovation} with Nicolas d'Alessandro (panelist), Tom Mitchell (panelist), Anna Xambó (panelist), and Matthias Strobel (moderator). Wallifornia MusicTech Hackathon. Liège, Belgium.\\
+\years{2018c}\textsc{Panel Member}. (June 6, 2018) \emph{Future, Democratization, and Globalization of NIMEs} with Onyx Ashanti (panelist), Peter Nyboer (panelist), Anna Xambó (panelist), Pamela Z (panelist) and R. Benjamin Knapp (moderator). NIME '18. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.
 \years{2018b} \textsc{Oral Presenter}. (June 6, 2018). “Who Are the Women Authors in NIME?---Improving Gender Balance in NIME Research". \emph{NIME '18}. Virginia Tech, Blacksburg, Virginia, USA.\\
 \years{2018a} \textsc{Oral Presenter}. (April 21, 2018). “Live Repurposing of Crowdsourced Sounds: Challenges and Opportunities of Using Online Repositories in Music Performance". \emph{Sonorities Symposium, Sonorities Festival}. Queen's University Belfast, Belfast, Northern Ireland.\\
 \years{2017} \textsc{Oral Presenter}. (August 24, 2017). “Turn-taking and Chatting in Collaborative Music Live Coding". \emph{AM '17}. London.\\
 \years{2016b} \textsc{Oral Presenter}. (July 2, 2016). “Challenges and New Directions for Collaborative Live Coding in the Classroom". \emph{ICLI 2016}. University of Sussex, Brighton, UK.\\
-\years{2016a} \textsc{Keynote Speaker}. (April 22, 2016). “Anna Xambó and Liz Dobson in Conversation". \emph{Women in Sound Women on Sound 2016: Educating girls in sound} at University of Lancaster. Lancaster, UK.\\
+\years{2016a} \textsc{Keynote Speaker}. (April 22, 2016). “Anna Xambó and Liz Dobson in Conversation". \emph{Women in Sound Women on Sound 2016: Educating girls in sound}, University of Lancaster. Lancaster, UK.\\
 \years{2015} \textsc{Lightning Talk Speaker}. (August 14, 2015). “EarSketch: A STEAM Approach to Broadening Participation in Computer Science Principles". \emph{RESPECT 2015}. Charlotte, NC. USA.\\
 \years{2014b} \textsc{Oral Presenter}. (July 1, 2014). “SoundXY4: Supporting Tabletop Collaboration and Awareness with Ambisonics Spatialisation". \emph{NIME '14}. Goldsmiths University, London.\\
 \years{2014a} \textsc{Oral Presenter}. (April 30, 2014). “Let's Jam the Reactable: Peer Learning during Musical Improvisation with a Tabletop Tangible Interface". \emph{CHI '14}. Toronto, ON, Canada.\\
@@ -432,7 +443,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2017a} \textsc{Panel Member} together with Ikkache, L. (May 4, 2017). “Women in Music Tech 2016--2017". Oral presentation and discussion. \emph{GTCMT}, Geogia Tech, Atlanta, GA, USA.\\
 \years{2016d} \textsc{Lightning Talk Speaker}. (November 2, 2016). “Tangible User Interfaces and Tabletops". \emph{First Annual Women and Music Tech Concert and Reception}, The Garage, Atlanta, GA. USA.\\
 \years{2016c} \textsc{Panel Member} together with Ikkache, L. and Jackson, D. (May 5, 2016). “Women in Sound." Oral presentation and discussion. \emph{GTCMT}, Geogia Tech, Atlanta, GA, USA.\\
-\years{2016b} \textsc{Oral Presenter}. (February 25, 2016). “Algorithmic Composition: My Personal Journey". Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT, Atlanta, GA, USA.\\
+\years{2016b} \textsc{Oral Presenter}. (February 25, 2016). “Algorithmic Composition: My Personal Journey". Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT, Georgia Tech, Atlanta, GA, USA.\\
 \years{2016a} \textsc{Oral Presenter}. (January 26, 2016). “EarSketch: Computational Music Remixing for All". Oral presentation as a guest speaker in Barbara Ericson's \emph{Educational Technology} class. College of Computing, Georgia Tech, Atlanta, GA, USA.\\
 \years{2015c} \textsc{Oral Presenter}. (September 3, 2015). “Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{College of Architecture Research Forum}, Georgia Tech. Atlanta, GA, USA.\\ 
 \years{2015b} \textsc{Oral Presenter}. (August 27, 2015). “Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{GVU Center Brown Bag Seminar Series}, Georgia Tech, Atlanta, GA, USA. \href{https://www.youtube.com/watch?v=VzOdtsq8YyE}{[video]}\\
@@ -451,6 +462,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Poster Presentations \& Demos}
 \noindent
 
+%{\years{2020} \textsc{Poster Presenter} (July X, 2020). ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. Accepted to appear in \emph{NIME '20}. Birmingham, UK.}\\
 \years{2018b} \textsc{Poster Presenter} together with Roma, G. (June 7, 2018). “Live Repurposing of Sounds: MIR Explorations with Personal and Crowdsourced Databases". \emph{NIME '18}. Blacksburg, Virginia, USA. \\
 \years{2018a} \textsc{Demo Presenter} together with Skach, S. (March 19, 2018). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". \emph{TEI '18}. Stockholm, Sweden. \\
 \years{2017c} \textsc{Poster Presenter}. (June 22, 2017). Authors: Weisling, A. and Xambó, A. “Constructing a Conceptual Framework for Collaborative Audiovisual Performance". \emph{ICCC '17}. Atlanta, GA, USA.\\
@@ -500,7 +512,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Group Albums}
 \noindent
 
-\years{2019}Anna Weisling and Anna Xambó. \emph{Beacon} [EP]. Barcelona: Carpal Tunnel.\\
+\years{2019}Anna Weisling and Anna Xambó. \emph{Beacon} (EP) [FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
 \years{1996}La Más Fina. \emph{Zande Phondex} [CD]. Barcelona: Apache Productions.\\
 \years{1994}La Más Fina. \emph{Como quien dice la hoja iberia extrafina} [Cassette]. Barcelona: Self-released.\\
 \years{1992}Sosa's Cáustica. \emph{Paraponera Clavata} [Cassette]. Barcelona: Murmur Town.
@@ -508,6 +520,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Participation in Compilations}
 \noindent
 
+\years{2020}Anna Xambó. “Poème Symphonique For Tape Metronome: Variation I" (5 min 38 sec) in \emph{In Unison} [FLAC/MP3 files]. Brussels: i.u. \\	
 \years{2019}Anna Xambó. “Kicks \& Cuts" (2 min 21 sec). in \emph{10th Anniversary Festival en Tiempo Real - WoNoMute Playlist} [WAV file].\\
 \years{2018}peterMann. “n02-petermann" (11 min 10 sec). in \emph{Noiselets} [FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
 \years{2016}peterMann. “Go wild y'all" (1 min). in \emph{Microtopies 2016} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
@@ -517,6 +530,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Broadcasting}
 \noindent
 
+\years{2019}Anna Xambó's “Footsteps". Feminatronic \#161 - Your 2019 Playback and More (SoundCloud's playlist).\\
 \years{2018c}Anna Xambó's “H2RI.01-04". (June 21, 2018). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
 \years{2018b}Anna Xambó's “H2RI.011". (June 10, 2018). NILUCCIO ON NOISE. Podcast \#154 (May 2018).\\
 \years{2018a}Anna Xambó's “H2RI.07". (May 17, 2018). No Pigeonholes EXP on KOWS-FM.\\
@@ -553,8 +567,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \noindent
 \years{2019}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (December 4, 2019). “Trondheim EMP Repository processing". \emph{Web Audio Conference 2019}. Rockheim, Trondheim, Norway.\\
 \years{2018e}Brown, N., Chudy, M., Dobson, L., Hoel, A.M., Ikkache, L., Pase, T., Schroeder, F., Stolfi, A., Wilkie, S., \textbf{Xambó, A.} (November 22, 2018). “Transmusicking II". Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
-\years{2018d}Martin, C.M., Lesteberg, M., Jawad, K., Aandahl, E., \textbf{Xambó, A.} (August 29, 2018). ``Stillness under Tension''. \emph{MCT Open Seminar}. MCT Portal, NTNU / UiO, Trondheim / Oslo.\\   
-\years{2018c}Martin, C.M., \textbf{Xambó, A.}, Visi, F., Morreale, F., Jensenius, A.R. (June 5, 2018). ``Stillness under Tension''. \emph{NIME '18}. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.\\   
+\years{2018d}Martin, C.M., Lesteberg, M., Jawad, K., Aandahl, E., \textbf{Xambó, A.} (August 29, 2018). ``Stillness during Tension''. \emph{MCT Open Seminar}. MCT Portal, NTNU / UiO, Trondheim / Oslo.\\   
+\years{2018c}Martin, C.M., \textbf{Xambó, A.}, Visi, F., Morreale, F., Jensenius, A.R. (June 5, 2018). ``Stillness during Tension''. \emph{NIME '18}. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.\\   
 \years{2018b}Weisling, A., \textbf{Xambó, A.} (June 5, 2018). “Beckon". \emph{NIME '18}. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.\\
 \years{2018a}Weisling, A., \textbf{Xambó, A.} (March 20, 2018). “Beacon". \emph{TEI '18}. Kulturhuset. Stockholm, Sweden.\\
 \years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., \textbf{Xambó, A.}, Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). “Transmusicking I". \emph{AM '17}. Oxford House Theatre. London, UK. \\
@@ -758,7 +772,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \section*{Supervision  \& Mentoring}
 \noindent
 
-\years{01/2020--present}Master thesis supervisor of Karolina Jawad (MCT, NTNU). From this work, we have published at ICLI '20 (see Peer-Reviewed Conference Papers).\\
+\years{01/2020--present}Master thesis supervisor of Karolina Jawad (Music Communication Technology, NTNU). From this work, we have published at ICLI '20 (see Peer-Reviewed Conference Papers).\\
 \years{08/2018--12/2019}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistants Mari Lesteberg and Ane Bjerkan.\\
 \years{01/2018--08/2018}Master thesis co-advisor of Tayjo Padmini Vaduru (Computer Science, QMUL). Master thesis title: ``Moodscape Generator: Automated Generation of Soundscapes''.\\
 \years{05/2016--12/2017}Mentor and advisor of the members of the student-led organization \emph{Women in Music Tech}, including the chair of the organization, Léa Ikkache, the editor-in-chief of the newsletter Amruta Vidwans, and other organization members, such as Jyoti Narang.\\
@@ -830,27 +844,35 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
-\years{2020}\textsc{Poster Chair}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
-\years{2019f}\textsc{Programme Committee Member}. \emph{ACM Tangible, Embedded and Embodied Interaction 2020}. Sydney, Australia.\\ 
-\years{2019e--present}\textsc{WiNIME officer}. \emph{International Conference of New Interfaces for Musical Expression}.\\ 
-\years{2019d}\textsc{Program Co-Chair}. \emph{International Conference on Live Interfaces 2020}. Trondheim, Norway.\\ 
-\years{2019c}\textsc{General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
-\years{2019b}\textsc{Paper Co-Chair \& Session Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
-\years{2019a}\textsc{Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
-\years{2018}\textsc{Programme Committee Member}. \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
-\years{2017c}\textsc{Session Chair}. \emph{Web Audio Conference 2017}. London.\\
-\years{2017b}\textsc{Programme Committee Member}. \emph{Second Conference on Computer Simulation of Musical Creativity}, Open University. Milton Keynes, UK.\\ 
-\years{2017a}\textsc{Local Committee Member}. \emph{International Conference on Computational Creativity 2017}, Georgia Tech. Atlanta, GA, USA.\\
+\years{2020b}\textsc{Session Chair} (``Hardware and Software for SMC''). \emph{Sound and Music Computing Conference}. Torino, Italy.\\
+\years{2020a}\textsc{Conference Poster Co-Chair}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
+\years{2019i--present}\textsc{WiNIME officer}. \emph{International Conference of New Interfaces for Musical Expression}.\\ 
+\years{2019h}\textsc{Conference Local Committee Member}. \emph{International Conference on Live Interfaces 2020}. Trondheim, Norway.\\ 
+\years{2019g}\textsc{Conference Programme Committee Member}. \emph{International Conference on Live Interfaces 2020}. Trondheim, Norway.\\ 
+\years{2019f}\textsc{Conference General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
+\years{2019e}\textsc{Conference Programme Committee Member}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
+\years{2019d}\textsc{Conference Session Chair} (``Mapping \& Sound Generation''). \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
+\years{2019C}\textsc{Conference Paper Co-Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
+\years{2019b}\textsc{Conference Programme Committee Member}. \emph{ACM Tangible, Embedded and Embodied Interaction 2020}. Sydney, Australia.\\ 
+\years{2019a}\textsc{Conference Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
+\years{2018b}\textsc{Conference Programme Committee Member}. \emph{Web Audio Conference 2018}. Berlin, Germany.\\ 
+\years{2018a}\textsc{Conference Programme Committee Member}. \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
+\years{2017d}\textsc{Conference Session Chair}. \emph{Web Audio Conference 2017}. London.\\
+\years{2017c}\textsc{Conference Programme Committee Member}. \emph{Web Audio Conference 2017}. London.\\ 
+\years{2017b}\textsc{Conference Programme Committee Member}. \emph{Second Conference on Computer Simulation of Musical Creativity}, Open University. Milton Keynes, UK.\\ 
+\years{2017a}\textsc{Conference Local Committee Member}. \emph{International Conference on Computational Creativity 2017}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2016b}\textsc{Co-Founder \& Co-Chair}. \emph{Women in Music Tech Committee}, GTCMT, Georgia Tech. Atlanta, GA, USA.\\
-\years{2016a}\textsc{Music/Artworks Co-Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
-\years{2011b}\textsc{Session Chair} (``Laptop/Coding/NI''). \emph{International Computer Music Conference}. Huddersfield, UK.\\
-\years{2011a}\textsc{Committee Member}. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.
+\years{2016b}\textsc{Conference Programme Committee Member}. \emph{International Conference on Live Interfaces 2016}, Brighton, UK.\\
+\years{2016a}\textsc{Conference Music/Artworks Co-Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
+\years{2011b}\textsc{Conference Session Chair} (``Laptop/Coding/NI''). \emph{International Computer Music Conference}. Huddersfield, UK.\\
+\years{2011a}\textsc{Conference Committee Member}. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.
 
 \subsection*{Conference Reviewer}
 \noindent
 
-\years{2020}\emph{Network Music Festival} (2020).\\
-\years{2019b}\emph{Tenth Workshop on Ubiquitous Music} (2020).\\
+\years{2020b}\emph{Workshop on the Internet of Sounds} (2020).\\ 
+\years{2020a}\emph{Network Music Festival} (2020).\\
+\years{2019b}\emph{Workshop on Ubiquitous Music} (2020).\\
 \years{2019a}\emph{Audio Mostly} (2019).\\
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
 \years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
@@ -865,7 +887,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{2015--2020}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2020).\\
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
-\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2020).\\
+\years{2012--2020}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2020).\\
 \years{2011--2019}\emph{New Interfaces for Musical Expression} (2011--2019).
 
 \subsection*{Conference Meta-Reviewer}
@@ -878,7 +900,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Journal Reviewer}
 \noindent
 
-\years{2019b}\emph{Computer Music Journal}. MIT Press Journals.\\
+\years{2019b}\emph{Computer Music Journal}. MIT Press Journals (2019--2020).\\
 \years{2019a}\emph{Arts}. MDPI.\\
 \years{2018d}\emph{PLOS One}. Public Library of Science.\\
 \years{2018c}\emph{British Journal of Educational Technology}. Wiley.\\
@@ -894,13 +916,13 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 
 \years{2020}\emph{Routledge}.
 
-\subsection*{Panelist}
-\noindent
-\years{2018e}(November 21, 2018). \emph{Panel: Women in Music Technology around the World} with Nela Brown (FLO), Magdalena Chudy (FLO), Liz Dobson (YSWN), Ada Mathea Hoel (WoNoMute), Léa Ikkache (WiMT), Tuna Pase (FLO), Franziska Schroeder (FLO), Ariane Stolfi, (Sonora) Sonia Wilkie (FLO) and Anna Xambó (WoNoMute, WiMT). Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
-\years{2018d}(November 15, 2018). \emph{Panel: Future of the Music Industries} with Joe Lyske (chair, MXX), Jesper Skibsby (panelist, WARM), Nick Breen (panelist, Reed Smith) and Anna Xambó (panelist, NTNU). Resonate Music Conference 2018. Barras Art and Design (BAAD), Glasgow, Scotland, UK.\\
-\years{2018c}(October 26, 2018). \emph{Panel Session 3: Equality, Diversity, Gender} with Thomas Hilder (chair), Jill Diana Halstead Hjørnevik (panelist), Sunniva Skjøstad Hovde (panelist), Vivian Anette Lagesen (panelist), and Anna Xambó (panelist). Knowing Music -- Musical Knowing: Cross disciplinary dialogue on epistemologies. International Music Research School 2018, NTNU. Dokkhuset, Trondheim, Norway.\\
-\years{2018b}(July 4, 2018) \emph{The Disturbing Discussion about Innovation} with Nicolas d'Alessandro (panelist), Tom Mitchell (panelist), Anna Xambó (panelist), and Matthias Strobel (moderator). Wallifornia MusicTech Hackathon. Liège, Belgium.\\
-\years{2018a}(June 6, 2018) \emph{Future, Democratization, and Globalization of NIMEs} with Onyx Ashanti (panelist), Peter Nyboer (panelist), Anna Xambó (panelist), Pamela Z (panelist) and R. Benjamin Knapp (moderator). NIME '18. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.
+%\subsection*{Panelist}
+%\noindent
+%\years{2018e}(November 21, 2018). \emph{Panel: Women in Music Technology around the World} with Nela Brown (FLO), Magdalena Chudy (FLO), Liz Dobson (YSWN), Ada Mathea Hoel (WoNoMute), Léa Ikkache (WiMT), Tuna Pase (FLO), Franziska Schroeder (FLO), Ariane Stolfi, (Sonora) Sonia Wilkie (FLO) and Anna Xambó (WoNoMute, WiMT). Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
+%\years{2018d}(November 15, 2018). \emph{Panel: Future of the Music Industries} with Joe Lyske (chair, MXX), Jesper Skibsby (panelist, WARM), Nick Breen (panelist, Reed Smith) and Anna Xambó (panelist, NTNU). Resonate Music Conference 2018. Barras Art and Design (BAAD), Glasgow, Scotland, UK.\\
+%\years{2018c}(October 26, 2018). \emph{Panel Session 3: Equality, Diversity, Gender} with Thomas Hilder (chair), Jill Diana Halstead Hjørnevik (panelist), Sunniva Skjøstad Hovde (panelist), Vivian Anette Lagesen (panelist), and Anna Xambó (panelist). Knowing Music -- Musical Knowing: Cross disciplinary dialogue on epistemologies. International Music Research School 2018, NTNU. Dokkhuset, Trondheim, Norway.\\
+%\years{2018b}(July 4, 2018) \emph{The Disturbing Discussion about Innovation} with Nicolas d'Alessandro (panelist), Tom Mitchell (panelist), Anna Xambó (panelist), and Matthias Strobel (moderator). Wallifornia MusicTech Hackathon. Liège, Belgium.\\
+%\years{2018a}(June 6, 2018) \emph{Future, Democratization, and Globalization of NIMEs} with Onyx Ashanti (panelist), Peter Nyboer (panelist), Anna Xambó (panelist), Pamela Z (panelist) and R. Benjamin Knapp (moderator). NIME '18. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.
 
 \subsection*{Coach}
 \noindent
@@ -969,8 +991,8 @@ Scientific Apps: MATLAB, Octave, R, SPSS.\\
 Version Control Systems: CVS, Git, Subversion.\\
 Music \& Audio Apps: DAWs (Ableton Live, Cubase, Reaper, Logic Pro), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio measurement \& test (Lindos).\\
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
-Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Jekyll.\\
-Learning Platforms: Blackboard, Canvas.\\
+Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty).\\
+Online Learning Platforms: Blackboard, Canvas.\\
 Hardware: Arduino, Bela, Lindos.
 
 %\vspace{1cm}
